--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,7 @@
   "license": "MIT",
   "devDependencies": {
     "normalize-css": "~3.0.3",
-    "bootstrap": "~4.0.0"
+    "bootstrap": "~4.0.0",
+    "foundation-sites": "~6.0.6"
   }
 }
