--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "normalize-css": "~3.0.3",
     "bootstrap": "~4.0.0",
-    "foundation-sites": "~6.0.6"
+    "foundation-sites": "~6.0.6",
+    "skeleton": "skeleton-css#~2.0.4"
   }
 }
