--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,7 @@
     "normalize-css": "~3.0.3",
     "bootstrap": "~4.0.0",
     "foundation-sites": "~6.0.6",
-    "skeleton": "skeleton-css#~2.0.4"
+    "skeleton": "skeleton-css#~2.0.4",
+    "flat-ui": "~2.2.2"
   }
 }
